# Kubernetes_CICD

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/test/: test_main.py
